--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^0.17.0",
     "firebase": "^4.6.0",
     "vue": "^2.4.2",
     "vuefire": "^1.4.4"
