--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   },
   "dependencies": {
     "axios": "^0.17.0",
+    "chart.js": "^2.7.1",
+    "chartkick": "^2.2.4",
     "firebase": "^4.6.0",
     "vue": "^2.4.2",
+    "vue-chartkick": "^0.2.0",
     "vuefire": "^1.4.4"
   },
   "devDependencies": {
