--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "firebase": "^4.6.0",
     "vue": "^2.4.2",
     "vue-chartkick": "^0.2.0",
+    "vue-smoothscroll": "^0.1.1",
     "vuefire": "^1.4.4"
   },
   "devDependencies": {
